# rstext

./: Cargo.toml  README.md
example_locales/de/: index.po
example_locales/en/: index.po
example_locales/en_US/: index.po
examples/: po_files.rs  po_files2.rs  use_default_lang.rs
src/: error.rs  lib.rs  po.rs
tests/: test.rs
