[package]
name = "rstext"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Rust GNU gettext utilities package. "
license = "MIT"
readme = "README.md"
repository = "https://github.com/zhiburt/rstext"
keywords = ["i18n", "gettext", "internationalization", "localization"]
categories = ["internationalization", "localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
